# inventory-system

./: .gitignore  CMakeLists.txt  main.cpp
src/api/: routes.h
src/api/controllers/: product.controller.cpp  product_controller.h
src/database/: connection.cpp  connection.h
src/database/models/: product.cpp  product.h
